--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ pokemon_master/__pycache__/pokemon.cpython-37.pyc
 Console-Game/.vs/*
 Console-Game/bin/*
 Console-Game/obj/*
+magic-8-ball/.idea/*
+magic-8-ball/out/*
 
